# hq-properties

./: .gitignore  README.md
.github/workflows/: build-api.yml  build-webapp.yml  lint-webapp.yml  test-webapp.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  Rocket.toml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  env.example.sh
backend/migrations/2023-05-07-134845_create_reviews/: down.sql  up.sql
backend/migrations/2023-05-11-033744_create_listings/: down.sql  up.sql
backend/migrations/2023-05-11-132622_create_posts/: down.sql  up.sql
backend/migrations/2023-06-07-142150_create_contact_form/: down.sql  up.sql
backend/migrations/2023-06-10-155134_create_buy_sell_guide/: down.sql  up.sql
backend/src/: buyers.rs  contact.rs  lib.rs  listings.rs  main.rs  posts.rs  reviews.rs  schema.rs  sellers.rs  videos.rs
backend/src/tests/: mod.rs  test_filewatcher.rs  test_listings.rs  test_posts.rs  test_reviews.rs  test_videos.rs
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  setup-ssl.sh  vite.config.ts
frontend/nginx/: default.conf
frontend/nginx/dev/: local.cert.pem  local.key.pem
frontend/nginx/prod/: default.conf
frontend/src/: app.html  stores.ts  util.ts
frontend/src/lib/: dummy.ts
frontend/src/lib/components/: Alert.svelte  Carousel.svelte  ListingCard.svelte  Pagination.svelte  PostCard.svelte  ReviewCard.svelte  SideBar.svelte  TitleBar.svelte
frontend/src/lib/i18n/: index.ts
frontend/src/lib/i18n/locales/: en.json  fr.json  zh.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  About.svelte  Buy.svelte  Footer.svelte  Header.svelte  Home.svelte  Listings.svelte  Media.svelte  Posts.svelte  Reviews.svelte  Sell.svelte  styles.css  styles.scss
frontend/src/routes/listings/: +page.svelte  +page.ts
frontend/src/routes/listings/[slug]/: +page.svelte  +page.ts
frontend/src/routes/posts/: +page.ts
frontend/src/routes/posts/[slug]/: +page.svelte  +page.ts
frontend/src/routes/reviews/: +page.svelte  +page.ts
frontend/src/routes/reviews/[slug]/: +page.svelte  +page.ts
frontend/src/routes/reviews/new/: +page.svelte
nginx/: default.conf
