[package]
authors = ["thematrixmaster"]
name = "backend_api"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
doc = false
name = "backend_api"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.0"
rocket = { version = "0.5.0-rc.3", "features"=["json"] }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
notify = { version = "6.0.0", features = ["serde"] }
zip = { version = "0.6.6" }
csv = "1.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
parking_lot = "0.12.1"
rand = "0.8.5"
