[package]
authors = ["thematrixmaster"]
name = "backend_api"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]

openssl = "*"
dotenvy = "0.15.0"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
rocket = { version = "0.5.0-rc.3", "features"=["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }

csv = { version = "1.2.2", optional = true }
notify = { version = "6.0.0", features = ["serde"], optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }

diesel_migrations = { version = "2.1.0", features = ["postgres"], optional = true }
termion = { version = "2.0.1", optional = true }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
optional = true

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors"
branch = "master"
optional = true

[lib]
path = "src/lib.rs"

[features]
build-api = ["rocket_contrib", "rocket_cors", "diesel_migrations"]
build-fw = ["csv", "notify", "reqwest"]
build-seed_db = ["termion"]

[[bin]]
doc = false
name = "api"
path = "src/main.rs"
required-features = ["build-api"]

[[bin]]
doc = false
name = "fw"
path = "src/bin/filewatcher.rs"
required-features = ["build-fw"]

[[bin]]
doc = false
name = "seed_db"
path = "src/bin/seed_db.rs"
required-features = ["build-seed_db"]

[dev-dependencies]
parking_lot = "0.12.1"
rand = "0.8.5"
